manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groip-4-ingress-prod
  namespace: group-4-prod
  labels:
    name: group-4-prod
spec:
  ingressClassName: nginx
  rules:
  - host: tcc-01.th1.proen.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/group-4-prod"
        backend:
          service:
            name: group-4-service-prod
            port: 
              number: 3000
